# Visual-CoT

./: .gitignore  Makefile  README.md  V_CoT_Training.ipynb  V_CoT_Training_V2.ipynb  build_repo.py  pyproject.toml  requirements.txt
app/: __init__.py  app.py
configs/: __init__.py  default.yaml  test.yaml
scripts/: __init__.py  generate_data.py  inference.py  train.py  verify_setup.py
src/: __init__.py  config_parser.py  dataset.py  model.py  trainer.py  utils.py
